split out eeUtil

--- a/bio_005_coral_bleaching/Dockerfile
+++ b/bio_005_coral_bleaching/Dockerfile
@@ -7,7 +7,7 @@ RUN pip install -U pip
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
-RUN pip install earthengine-api google-cloud-storage
+RUN pip install -e git+https://github.com/fgassert/eeUtil#egg=eeUtil
 
 # set name
 ARG NAME=nrt-script
@@ -18,10 +18,10 @@ RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents/ .
 COPY credentials.json .
-VOLUME /opt/$NAME/data
 
-RUN useradd $NAME
-RUN chown -R $NAME:$NAME .
+RUN useradd -r $NAME
+RUN chown -R $NAME:$NAME /opt/$NAME
+VOLUME /opt/$NAME/data
 USER $NAME
 
 CMD ["python", "main.py"]
