--- a/bio_005_coral_bleaching/Dockerfile
+++ b/bio_005_coral_bleaching/Dockerfile
@@ -2,8 +2,7 @@ FROM python:3.6
 MAINTAINER Francis Gassert <fgassert@wri.org>
 
 # install core libraries
-RUN apt-get update
-RUN pip install -U pip
+RUN apt-get update && pip install -U pip
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
