--- a/bio_037_chl_a/Dockerfile
+++ b/bio_037_chl_a/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6
+FROM python:3-stretch
 MAINTAINER Kristine Lister <kristine.lister@wri.org>
 
 # install core libraries
@@ -7,12 +7,11 @@ RUN pip install -U pip
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
+RUN apt-get -y install python-gdal
 RUN pip install oauth2client
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install netCDF4
 
-#install
-RUN apt-get -y install python-gdal
 
 # set name
 ARG NAME=nrt-script
