--- a/bio_005_coral_bleaching/Dockerfile
+++ b/bio_005_coral_bleaching/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.6
 MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
+#Note this script was originally developed by Francis Gassert <fgassert@wri.org>
 
 # install core libraries
 RUN apt-get update && pip install -U pip
