edit docker file and readme

--- a/bio_007b_nrt_rw0_marine_protected_areas/Dockerfile
+++ b/bio_007b_nrt_rw0_marine_protected_areas/Dockerfile
@@ -11,6 +11,7 @@ RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
 RUN pip install requests
 RUN pip install numpy
 RUN pip install pandas
+RUN pip install geopandas==0.8.1
 
 # set name
 ARG NAME=bio_007b
