--- a/bio_007b_nrt_rw0_marine_protected_areas/Dockerfile
+++ b/bio_007b_nrt_rw0_marine_protected_areas/Dockerfile
@@ -4,11 +4,12 @@ MAINTAINER Yujing Wu <yujing.wu@wri.org>
 
 # install core libraries
 RUN apt-get update
-RUN pip install -U pip
+RUN pip install --upgrade pip
 
 # install application libraries
 RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
 RUN pip install requests
+RUN pip install carto==1.11.1
 RUN pip install numpy
 RUN pip install pandas
 RUN pip install geopandas==0.8.1
@@ -21,7 +22,10 @@ ENV NAME ${NAME}
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents .
+COPY time.cron .
+VOLUME ./data
 
+# Set user for container security
 RUN useradd $NAME
 RUN chown -R $NAME:$NAME .
 USER $NAME
