edit docker file to add libraries

--- a/bio_007_rw2_world_database_on_protected_areas/Dockerfile
+++ b/bio_007_rw2_world_database_on_protected_areas/Dockerfile
@@ -4,14 +4,15 @@ MAINTAINER Yujing Wu <yujing.wu@wri.org>
 
 # install core libraries
 RUN apt-get update
-RUN pip install -U pip
+RUN pip install --upgrade pip
 
 # install application libraries
 RUN pip install carto==1.11.1
-RUN pip install multiprocessing
+RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install requests
 RUN pip install numpy
 RUN pip install pandas
+RUN pip install geopandas==0.8.1
 
 # set name
 ARG NAME=bio_007_rw2_wdpa
