--- a/bio_037_chl_a/Dockerfile
+++ b/bio_037_chl_a/Dockerfile
@@ -10,6 +10,7 @@ RUN pip install -U pip
 RUN apt-get install -y gdal-bin libgdal-dev
 RUN apt-get -y install python-gdal
 RUN pip install oauth2client==4.1.3
+RUN pip install google-api-python-client==1.12.8
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install netCDF4==1.5.3
 
