--- a/archived/bio_007_world_database_on_protected_areas/Dockerfile
+++ b/archived/bio_007_world_database_on_protected_areas/Dockerfile
@@ -1,21 +1,19 @@
 FROM python:3.6
-MAINTAINER Yujing Wu <yujing.wu@wri.org>
-#Note this script was originally developed by Yujing Wu <yujing.wu@wri.org>
+MAINTAINER Amelia Snyder <amelia.snyder@wri.org>
+#Note this script was originally developed by Amelia Snyder <amelia.snyder@wri.org>
 
 # install core libraries
 RUN apt-get update
-RUN pip install --upgrade pip
+RUN pip install -U pip
 
 # install application libraries
-RUN pip install carto==1.11.1
-RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
+RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
 RUN pip install requests
 RUN pip install numpy
 RUN pip install pandas
-RUN pip install geopandas==0.8.1
 
 # set name
-ARG NAME=bio_007_rw2_wdpa
+ARG NAME=bio_007_wdpa
 ENV NAME ${NAME}
 
 # copy the application folder inside the container
