--- a/bio_037_chl_a/Dockerfile
+++ b/bio_037_chl_a/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3-stretch
+FROM python:3.9
 MAINTAINER Kristine Lister <kristine.lister@wri.org>
 #Note this script was originally developed by Kristine Lister <kristine.lister@wri.org>
 
@@ -8,11 +8,10 @@ RUN pip install -U pip
 
 # install application libraries
 RUN apt-get install -y gdal-bin libgdal-dev
-RUN apt-get -y install python-gdal
 RUN pip install oauth2client==4.1.3
 RUN pip install google-api-python-client==1.12.8
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
-RUN pip install netCDF4==1.5.3
+RUN pip install netCDF4==1.6.3
 
 
 # set name
