update script to get all paths before separate into points and polygons

--- a/bio_007b_nrt_rw0_marine_protected_areas/Dockerfile
+++ b/bio_007b_nrt_rw0_marine_protected_areas/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.7
-MAINTAINER Yujing Wu <yujing.wu@wri.org>
-#Note this script was originally developed by Yujing Wu <yujing.wu@wri.org>
+FROM python:3.9
+MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
+# Note this script was originally developed by Yujing Wu <yujing.wu@wri.org>
 
 # install core libraries
 RUN apt-get update
@@ -9,10 +9,10 @@ RUN pip install --upgrade pip
 # install application libraries
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install requests
-RUN pip install carto==1.11.1
+RUN pip install carto==1.11.3
 RUN pip install numpy
 RUN pip install pandas
-RUN pip install geopandas==0.9.0
+RUN pip install geopandas==0.13.2
 
 # set name
 ARG NAME=bio_007b
