--- a/bio_007b_nrt_rw0_marine_protected_areas/Dockerfile
+++ b/bio_007b_nrt_rw0_marine_protected_areas/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9
+FROM python:3.7.7
 MAINTAINER Weiqi Zhou <weiqi.zhou@wri.org>
 # Note this script was originally developed by Yujing Wu <yujing.wu@wri.org>
 
@@ -7,12 +7,14 @@ RUN apt-get update
 RUN pip install --upgrade pip
 
 # install application libraries
+RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install requests
 RUN pip install carto==1.11.3
 RUN pip install numpy
 RUN pip install pandas
-RUN pip install geopandas==0.13.2
+RUN pip install geopandas==0.9.0
+RUN pip install GDAL==2.4.2
 
 # set name
 ARG NAME=bio_007b
