--- a/bio_037_chl_a/Dockerfile
+++ b/bio_037_chl_a/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.9
-MAINTAINER Kristine Lister <kristine.lister@wri.org>
+LABLE maintainer="Kristine Lister <kristine.lister@wri.org>"
 #Note this script was originally developed by Kristine Lister <kristine.lister@wri.org>
 
 # install core libraries
@@ -11,12 +11,12 @@ RUN apt-get install -y gdal-bin libgdal-dev
 RUN pip install oauth2client==4.1.3
 RUN pip install google-api-python-client==1.12.8
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
-RUN pip install netCDF4==1.6.3
+RUN pip install netCDF4==1.7.1
 
 
 # set name
 ARG NAME=nrt-script
-ENV NAME ${NAME}
+ENV NAME=${NAME}
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
